# multi-robot-fleet-sample-application

./: .gitignore  README.md  THIRD-PARTY-NOTICES
setup/: app_launcher.py.temp  aws_setup.bash  aws_setup.py  aws_setup_sample.bash  bootstrap.cfn.yaml  custom_dependencies.yaml  ros_setup.bash
setup/fleetLauncherApp/: README.md  base_template.yml  requirements.txt  template.yml
setup/fleetLauncherApp/fleetLauncherLambda/: app.py  event.json
setup/patches/: aws-robomaker-small-warehouse-world.patch  husky.patch
simulation_ws/: .rosinstall  Dockerfile  robot-fleet-sim.json
simulation_ws/docker/: README.txt  entrypoint.sh
simulation_ws/src/robot_fleet/: CMakeLists.txt  package.xml
simulation_ws/src/robot_fleet/config/: mqtt_broker_config.yaml
simulation_ws/src/robot_fleet/launch/: husky_app_only.launch  husky_app_with_rtsp.launch  husky_with_remapped_cmd_vel.launch  robot_fleet_rosbridge.launch
simulation_ws/src/robot_fleet/launch/include/: amcl.launch  move_base_remapped_cmd_vel.launch
simulation_ws/src/robot_fleet/msg/: MQTT_GAZEBO_STATE.msg  MQTT_POSE.msg
simulation_ws/src/robot_fleet/scripts/: client_mqtt.py  client_rosbridge.py  gazebo_model_mover.py  gazebo_model_mover_mqtt.py
simulation_ws/src/robot_fleet/src/: move_object.cc
simulation_ws/src/velocity_mqtt_manager/: CMakeLists.txt  package.xml
simulation_ws/src/velocity_mqtt_manager/config/: iot_config.json
simulation_ws/src/velocity_mqtt_manager/launch/: velocity_mqtt_manager.launch
simulation_ws/src/velocity_mqtt_manager/scripts/: mqtt_connector.py  velocity_manager.py
workspace/src/robot_fleet/: package.xml
workspace/src/robot_fleet/config/: costmap_common.yaml  costmap_local.yaml
workspace/src/robot_fleet/launch/: robot_fleet_rosbridge.launch  robot_fleet_rosbridge_w_rviz.launch
workspace/src/robot_fleet/launch/include/: amcl.launch  move_base.launch
workspace/src/robot_fleet/rviz/: basic_data.rviz
workspace/src/robot_fleet/scripts/: client_rosbridge.py  gazebo_model_mover.py
workspace/src/robot_fleet/static_models_w_plugin/husky/: model.sdf
