<?xml version="1.0"?>
<package format="2">
  <name>robot_fleet</name>
  <version>1.0.0</version>
  <description>The robot_fleet package</description>

  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roslibpy-pip</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>rosbridge_suite</exec_depend>

  <export>
      <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/static_models_w_plugin" />
  </export>
</package>
