<?xml version="1.0"?>
<package format="2">
  <name>velocity_mqtt_manager</name>
  <version>1.0.0</version>
  <description>The velocity_mqtt_manager package</description>

  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
